--- a/src/css/app.css
+++ b/src/css/app.css
@@ -124,19 +124,6 @@ li:last-child {
 .white {
   color: #f1f1f1; }
 
-@media (prefers-color-scheme: dark) {
-  * {
-    color: #f1f1f1; }
-
-  body {
-    background-color: #232021; }
-
-  p,
-  li,
-  .contactInput {
-    color: #f1f1f1;
-    font-weight: 300;
-    font-size: 0.9rem; } }
 .navContainer {
   display: flex;
   flex-flow: row nowrap;
@@ -255,9 +242,6 @@ li:last-child {
   margin-bottom: 0;
   text-align: left; }
 
-@media (prefers-color-scheme: dark) {
-  .introSubtext {
-    color: #f1f1f1; } }
 @media only screen and (max-width: 640px) {
   ul {
     justify-content: flex-start; } }
@@ -284,12 +268,8 @@ li:last-child {
 .addressBar {
   fill: #f1f1f1; }
 
-@media (prefers-color-scheme: dark) {
-  .browserBar {
-    fill: #4e4b4c; } }
 .projectVideo {
   width: 300px;
-  border-radius: 0 0 0.3em 0.3em;
   box-shadow: 1px 1px 25px 0px rgba(50, 50, 50, 0.5); }
 
 .videoContainer {
@@ -433,9 +413,6 @@ textarea {
   vertical-align: bottom;
   opacity: 0.75; }
 
-@media (prefers-color-scheme: dark) {
-  .linkedInLogoWhitespace {
-    fill: #232021; } }
 .githubSVG {
   fill: #58b882; }
 
