--- a/src/css/components/_footer.scss
+++ b/src/css/components/_footer.scss
@@ -26,8 +26,8 @@
 	opacity: 0.75;
 }
 
-@media (prefers-color-scheme: dark) {
-	.linkedInLogoWhitespace {
-		fill: $black;
-	}
-}
+// @media (prefers-color-scheme: dark) {
+// 	.linkedInLogoWhitespace {
+// 		fill: $black;
+// 	}
+// }
