--- a/src/css/components/_intro.scss
+++ b/src/css/components/_intro.scss
@@ -13,8 +13,8 @@
 	text-align: left;
 }
 
-@media (prefers-color-scheme: dark) {
-	.introSubtext {
-		color: $white;
-	}
-}
+// @media (prefers-color-scheme: dark) {
+// 	.introSubtext {
+// 		color: $white;
+// 	}
+// }
